test/semantic_errors/invalid_binaryop3.mc
void main() {
    bool res;
    int a;
    char b;
    res = a < b; /* cannot compare char with int */
}